--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,14 @@
   <meta name="msapplication-config" content="{{ '/assets/img/icons/browserconfig.xml?v=qA3OXqyw77' | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-5258314926190743",
+          enable_page_level_ads: true
+     });
+</script>
+  
   {% if site.google_tag_manager %}
 
     {% include gtm.html %}
